Squashed 'dlib/' changes from d3a3288..f2868ad
f2868ad Improved finding of X11 on mac os
d96711e Created release v18.17
dec47ce Added tag v18.17 for changeset ce6f36498786
38d42e7 updated docs
835d3b9 fixed incorrect tests
cd834b4 Improved grammar in boost compilation message.
c78b9fe Fixed a bug in parse_xml().  It failed to check if the given input stream was valid before trying to parse it.
ecdfdea Fixed build error due to messed up includes.
ab4920a added missing #include
2820de8 Removed unnecessary #included code.
fdaefe0 Merge pull request #24 from tzutalin/master
d2b4abe Remove redundant include
e5b691b Added sponsorship statement
825ae09 merged
f1c734d Fixed a bug pointed out by Ernesto Tapia that could cause matrix expressions that involve sub matrix views (e.g. colm) to produce the wrong results when the BLAS bindings were enabled.
f6ad191 Clarified spec
0c561f2 Switched more URLs to dlib.net rather than sourceforge.net.
0358aa8 merged
ffb44f8 Merge pull request #22 from stefan-it/stefan/sourceforge-mercurial-removal
a259661 Removes link to sourceforge mercurial repository and use the GitHub address instead.
985b960 merged
4887e1c Added an exception specification saying that transaction's destructor can throw since C++11 sets all destructors to noexcept unless otherwise specified.
1b76017 Removed more sourceforge references.
98a6553 merged
d2f8c69 Removed more links to sourceforge, changed the download link to a much more obvious button, made links look nicer with some better CSS.
7c8b982 Fixed the image_display so that when you try to click on boxes that happen to have object parts labeled with OBJECT_PART_NOT_PRESENT it doesn't accidentally move that non-present part rather than what you are clicking on.
d37699e merged
a43d6d4 fixed broken link
b3cae88 Removed sourceforge download link.  Now you download from the dlib.net server.
cd8e9de Made it so you can put other xml tags in a link tag and they will be evaluated like you would expect.
89d6055 Fixed je

--- a/dlib/CMakeLists.txt
+++ b/dlib/CMakeLists.txt
@@ -145,10 +145,13 @@ if (NOT TARGET dlib)
 
          if (NOT DLIB_NO_GUI_SUPPORT)
             find_library(xlib X11)
-            # make sure X11 is in the include path
-            find_path(xlib_path Xlib.h
+            # Make sure X11 is in the include path.  Note that we look for
+            # Xlocale.h rather than Xlib.h because it avoids finding a partial
+            # copy of the X11 headers on systems with anaconda installed.
+            find_path(xlib_path Xlocale.h
                PATHS 
                /Developer/SDKs/MacOSX10.4u.sdk/usr/X11R6/include
+               /opt/local/include
                PATH_SUFFIXES X11
                )
             if (xlib AND xlib_path)
