--- a/mitielib/java/CMakeLists.txt
+++ b/mitielib/java/CMakeLists.txt
@@ -12,6 +12,7 @@ set(source_files
    ../src/ner_trainer.cpp
    ../src/stem.c
    ../src/stemmer.cpp
+   ../src/micro_ner.cpp
    )
 
 include_directories(
