--- a/mitielib/java/maven/pom.xml
+++ b/mitielib/java/maven/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>edu.mit.ll</groupId>
     <artifactId>mitie</artifactId>
-    <version>0.2</version>
+    <version>0.3</version>
 
     <name>MIT Information Extraction</name>
     <description>This project provides free (even for commercial use) state-of-the-art information extraction tools. The current release includes tools for performing named entity extraction and binary relation detection as well as tools for training custom extractors and relation detectors.</description>
@@ -46,28 +46,28 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.8</version>
-                <executions>
-                    <execution>
-                        <id>download-files</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                        <configuration>
-                            <target>
-                                <get src="https://dl.dropboxusercontent.com/u/37572555/Github/OpenSource/total_word_feature_extractor.dat"
-                                     dest="${project.basedir}/src/main/resources/extractors/english/"
-                                     verbose="false"
-                                     usetimestamp="true"/>
-                            </target>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-antrun-plugin</artifactId>-->
+                <!--<version>1.8</version>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<id>download-files</id>-->
+                        <!--<phase>generate-resources</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>run</goal>-->
+                        <!--</goals>-->
+                        <!--<configuration>-->
+                            <!--<target>-->
+                                <!--<get src="https://dl.dropboxusercontent.com/u/37572555/Github/OpenSource/total_word_feature_extractor.dat"-->
+                                     <!--dest="${project.basedir}/src/main/resources/extractors/english/"-->
+                                     <!--verbose="false"-->
+                                     <!--usetimestamp="true"/>-->
+                            <!--</target>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.2</version>
