--- a/mitielib/makefile
+++ b/mitielib/makefile
@@ -15,12 +15,14 @@ INSTALL_PREFIX=/usr/local
 SRC = src/mitie.cpp
 SRC += src/named_entity_extractor.cpp
 SRC += src/ner_feature_extraction.cpp
+SRC += src/text_categorizer_extractor.cpp
 SRC += src/binary_relation_detector.cpp
 SRC += src/binary_relation_detector_trainer.cpp
 SRC += src/stem.c
 SRC += src/stemmer.cpp
 SRC += src/conll_parser.cpp
 SRC += src/ner_trainer.cpp
+SRC += src/text_categorizer_trainer.cpp
 SRC += ../dlib/dlib/threads/multithreaded_object_extension.cpp
 SRC += ../dlib/dlib/threads/threaded_object_extension.cpp
 SRC += ../dlib/dlib/threads/threads_kernel_1.cpp
