A simple yet workable version of text classification

--- a/mitielib/CMakeLists.txt
+++ b/mitielib/CMakeLists.txt
@@ -35,6 +35,7 @@ if (NOT TARGET mitie)
          src/ner_trainer.cpp
          src/text_categorizer_trainer.cpp
          src/text_categorizer_extractor.cpp
+         src/text_feature_extraction.cpp
            )
 
    add_library(mitie ${source_files})
