--- a/mitielib/makefile
+++ b/mitielib/makefile
@@ -23,6 +23,7 @@ SRC += src/stemmer.cpp
 SRC += src/conll_parser.cpp
 SRC += src/ner_trainer.cpp
 SRC += src/text_categorizer_trainer.cpp
+SRC += src/text_feature_extraction.cpp
 SRC += ../dlib/dlib/threads/multithreaded_object_extension.cpp
 SRC += ../dlib/dlib/threads/threaded_object_extension.cpp
 SRC += ../dlib/dlib/threads/threads_kernel_1.cpp
