fix makefile for make test

--- a/mitielib/makefile
+++ b/mitielib/makefile
@@ -15,7 +15,7 @@ INSTALL_PREFIX=/usr/local
 SRC = src/mitie.cpp
 SRC += src/named_entity_extractor.cpp
 SRC += src/ner_feature_extraction.cpp
-SRC += src/text_categorizer_extractor.cpp
+SRC += src/text_categorizer.cpp
 SRC += src/binary_relation_detector.cpp
 SRC += src/binary_relation_detector_trainer.cpp
 SRC += src/stem.c
