Build statically on windows so people don't need to worry about packaging VC dlls.

--- a/mitielib/CMakeLists.txt
+++ b/mitielib/CMakeLists.txt
@@ -14,6 +14,7 @@ if(COMMAND cmake_policy)
 endif()
 
 set(CMAKE_POSITION_INDEPENDENT_CODE True)
+include(tell_visual_studio_to_use_static_runtime.cmake)
 
 if (NOT TARGET mitie)
    if (NOT DEFINED BUILD_SHARED_LIBS)
@@ -48,9 +49,6 @@ if (NOT TARGET mitie)
 
    # Determine the path to our CMakeLists.txt file.
    string(REGEX REPLACE "CMakeLists.txt$" "" base_path ${CMAKE_CURRENT_LIST_FILE})
-   # Tell cmake to copy the needed visual studio runtime dll files into the output folder
-   set(CMAKE_INSTALL_SYSTEM_RUNTIME_DESTINATION ${base_path})
-   INCLUDE(InstallRequiredSystemLibraries)
    install(TARGETS mitie
       DESTINATION ${base_path}
       )
