Made imglab compile with the static visual studio runtime.  This also avoids linker errors in some cases.

--- a/tools/wordrep/CMakeLists.txt
+++ b/tools/wordrep/CMakeLists.txt
@@ -20,6 +20,7 @@ set(source
 
 PROJECT(${project_name})
 
+include(../../mitielib/tell_visual_studio_to_use_static_runtime.cmake)
 include(../../mitielib/cmake)
 
 
