Initial CMake build process uplift
* Create CMakeLists for overarching project root folder and modularise build options (aiming to set defaults which align to original behaviour)
* Update mitielib CMakeLists to assume it is called from parent project CMakeLists and implement new build options
* Add ability to prepend mitie- prefix to tools and examples executable output files

--- a/examples/C/ner/CMakeLists.txt
+++ b/examples/C/ner/CMakeLists.txt
@@ -7,7 +7,7 @@ cmake_minimum_required(VERSION 2.6)
 
 
 
-set(project_name ner_example)
+set(project_name "${MITIE_EXECUTABLES_PREFIX}ner_c_example")
 set(source
    ner_example.c
    )
