--- a/mitielib/CMakeLists.txt
+++ b/mitielib/CMakeLists.txt
@@ -2,32 +2,17 @@
 # This is a CMake makefile.  You can find the cmake utility and
 # information about it at http://www.cmake.org
 #
+cmake_minimum_required(VERSION 3.10)
+project(mitie C CXX)
 
-# setting this makes CMake allow normal looking if else statements
-SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS true)
 
-cmake_minimum_required(VERSION 2.4)
-
-# Suppress cmake warnings about changes in new versions.
-if(COMMAND cmake_policy) 
-   cmake_policy(SET CMP0003 NEW) 
-endif()
-
-set(CMAKE_POSITION_INDEPENDENT_CODE True)
 include(tell_visual_studio_to_use_static_runtime.cmake)
+
 
 if (NOT TARGET mitie)
    if (NOT DEFINED BUILD_SHARED_LIBS)
-      set(BUILD_SHARED_LIBS 1)
+      set(BUILD_SHARED_LIBS ON)
    endif()
-
-   set(DLIB_LINK_WITH_LIBPNG OFF CACHE STRING "not needed by MITIE" FORCE)
-   set(DLIB_LINK_WITH_LIBJPEG OFF CACHE STRING "not needed by MITIE" FORCE)
-   set(DLIB_LINK_WITH_SQLITE3 OFF CACHE STRING "not needed by MITIE" FORCE)
-
-
-   include(../dlib/dlib/cmake)
-   include_directories(include)
 
    set(source_files 
          src/stemmer.cpp
@@ -45,7 +30,21 @@ if (NOT TARGET mitie)
          )
 
    add_library(mitie ${source_files})
-   target_link_libraries(mitie dlib)
+   set_target_properties(mitie PROPERTIES POSITION_INDEPENDENT_CODE ON)
+   target_compile_definitions(mitie PRIVATE MITIE_BUILD)
+
+   if(BUILD_SHARED_LIBS)
+      target_compile_definitions(mitie PUBLIC MITIE_SHARED)
+   endif()
+
+   target_include_directories(mitie PUBLIC include)
+   
+   if(MITIE_INTEGRATED_DLIB)
+      target_link_libraries(mitie dlib)
+   else()
+      find_package(dlib REQUIRED)
+      target_link_libraries(mitie dlib::dlib)
+   endif()
 
    # Determine the path to our CMakeLists.txt file.
    string(REGEX REPLACE "CMakeLists.txt$" "" base_path ${CMAKE_CURRENT_LIST_FILE})
