--- a/examples/cpp/train_relation_extraction/CMakeLists.txt
+++ b/examples/cpp/train_relation_extraction/CMakeLists.txt
@@ -7,7 +7,7 @@ cmake_minimum_required(VERSION 2.6)
 
 
 
-set(project_name train_relation_extraction_example)
+set(project_name "${MITIE_EXECUTABLES_PREFIX}train_relation_extraction_example")
 set(source
    train_relation_extraction_example.cpp
    )
