--- a/tools/wordrep/CMakeLists.txt
+++ b/tools/wordrep/CMakeLists.txt
@@ -3,12 +3,11 @@
 # information about it at http://www.cmake.org
 #
 
-
 cmake_minimum_required(VERSION 2.6)
 
 
 
-set(project_name wordrep)
+set(project_name "${MITIE_EXECUTABLES_PREFIX}wordrep")
 set(source
    src/main.cpp
    src/basic_morph.cpp
@@ -24,7 +23,6 @@ include(../../mitielib/cmake)
 
 
 ADD_EXECUTABLE(${project_name} ${source})
-TARGET_LINK_LIBRARIES(${project_name} mitie )
-
+TARGET_LINK_LIBRARIES(${project_name} mitie)
 
 
