Build process tweaks: separate build options for C and C++ examples, option to switch _example suffix on/off, error if system-installed dlib not found when MITIE_INTEGRATED_DLIB=OFF, omit lib prefix on Windows MinGW

--- a/examples/cpp/ner/CMakeLists.txt
+++ b/examples/cpp/ner/CMakeLists.txt
@@ -7,7 +7,7 @@ cmake_minimum_required(VERSION 3.10)
 
 
 
-set(project_name "${MITIE_EXECUTABLES_PREFIX}ner_example")
+set(project_name "${MITIE_EXECUTABLES_PREFIX}ner${MITIE_EXAMPLES_SUFFIX}")
 set(source
    ner_example.cpp
    )
