--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,14 @@ cmake_minimum_required(VERSION 3.10)
 project(mitie_project)
 
 
+option(BUILD_SHARED_LIBS "mitie: build shared libraries" ON)
 option(MITIE_INTEGRATED_DLIB "mitie: build and statically link integrated dlib as shipped with MITIE codebase (otherwise look for system dlib)" ON)
 option(MITIE_INTEGRATED_DLIB_DISABLE_OPT_COMPONENTS "mitie: disable optional components not required for MITIE when building integrated dlib (image libraries, FFmpeg, SQLite3)" ON)
 option(MITIE_BUILD_TOOLS "mitie: build tools" ON)
-option(MITIE_BUILD_EXAMPLES "mitie: build examples" ON)
+option(MITIE_BUILD_C_EXAMPLES "mitie: build C examples" ON)
+option(MITIE_BUILD_CPP_EXAMPLES "mitie: build C++ examples" ON)
 option(MITIE_APPLY_EXECUTABLES_PREFIX "mitie: add 'mitie-' prefix to executables" OFF)
+option(MITIE_APPLY_EXAMPLES_SUFFIX "mitie: add '_example' suffix to executables for C and C++ examples" ON)
 
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
@@ -16,6 +19,12 @@ if(MITIE_APPLY_EXECUTABLES_PREFIX)
    set(MITIE_EXECUTABLES_PREFIX "mitie-")
 else()
    set(MITIE_EXECUTABLES_PREFIX "")
+endif()
+
+if(MITIE_APPLY_EXAMPLES_SUFFIX)
+   set(MITIE_EXAMPLES_SUFFIX "_example")
+else()
+   set(MITIE_EXAMPLES_SUFFIX "")
 endif()
 
 
@@ -46,10 +55,13 @@ if(MITIE_BUILD_TOOLS)
    add_subdirectory(tools/wordrep)
 endif()
 
-# MITIE examples (C and C++)
-if(MITIE_BUILD_EXAMPLES)
+# MITIE examples
+if(MITIE_BUILD_C_EXAMPLES)
    add_subdirectory(examples/C/ner)
    add_subdirectory(examples/C/relation_extraction)
+endif()
+
+if(MITIE_BUILD_CPP_EXAMPLES)
    add_subdirectory(examples/cpp/ner)
    add_subdirectory(examples/cpp/relation_extraction)
    add_subdirectory(examples/cpp/text_categorizer)
