--- a/examples/C/relation_extraction/CMakeLists.txt
+++ b/examples/C/relation_extraction/CMakeLists.txt
@@ -7,7 +7,7 @@ cmake_minimum_required(VERSION 3.10)
 
 
 
-set(project_name "${MITIE_EXECUTABLES_PREFIX}relation_extraction_c_example")
+set(project_name "${MITIE_EXECUTABLES_PREFIX}relation_extraction_c${MITIE_EXAMPLES_SUFFIX}")
 set(source
    relation_extraction_example.c
    )
