--- a/examples/cpp/train_relation_extraction/CMakeLists.txt
+++ b/examples/cpp/train_relation_extraction/CMakeLists.txt
@@ -7,7 +7,7 @@ cmake_minimum_required(VERSION 3.10)
 
 
 
-set(project_name "${MITIE_EXECUTABLES_PREFIX}train_relation_extraction_example")
+set(project_name "${MITIE_EXECUTABLES_PREFIX}train_relation_extraction${MITIE_EXAMPLES_SUFFIX}")
 set(source
    train_relation_extraction_example.cpp
    )
